--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <!-- About Section -->
         <section id="about" class="about-container fade-up">
             <div class="about-image">
-                <img src="Photos/My photo.jpg" alt="Sofyane Hajoubi">
+                <img src="My photo.jpg" alt="Sofyane Hajoubi">
             </div>
             <div class="about-text">
                 <h1>About</h1>
