--- a/discoboy.html
+++ b/discoboy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Posters — Sofyane Hajoubi</title>
+    <title>Rhythmic Animation Inspired by "Disco Boy" — Sofyane Hajoubi</title>
     <link rel="icon" type="image/svg+xml" href="Favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,23 +32,23 @@
             <a href="index.html#gallery">← Back to Gallery</a>
         </div>
 
-        <h1 class="project-title">Interactive Posters</h1>
-        <p class="project-subtitle">Merging Physical and Digital Realms via Augmented Reality</p>
+        <h1 class="project-title">Rhythmic Animation Inspired by "Disco Boy"</h1>
+        <p class="project-subtitle">Blending Manual Artistry with Digital Motion</p>
 
         <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/ZNWNhBES3iY?si=Y3BF60zxZQalCtBb&controls=1&rel=0&fs=1"
-                title="Interactive Posters" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/Q4HpEDC89rU?si=MCakbqFHgs9T8hGV&controls=1&rel=0&fs=1"
+                title='Rhythmic Animation Inspired by "Disco Boy"' frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
         </div>
 
         <div class="project-description">
-            <p>This project features four interactive posters merging physical and digital realms through Augmented
-                Reality. Using smart devices, viewers trigger 42-second animations (60 fps) that overlay
-                71&nbsp;×&nbsp;100&nbsp;cm prints. By integrating graphic and audio elements, static images transform
-                into living narratives, turning reality into imagination and making the audience an integral part of the
-                artwork's vibrant, multi-layered digital world.</p>
+            <p>Merging manual drawing with digital editing, this project interprets a dance scene from Disco Boy. The
+                process involved creating 560 hand-drawn frames synchronized to a frantic rhythmic progression. These
+                frames were scanned and integrated into a 12 fps video format. The final animation captures the
+                character's transition from calm to intensity, elegantly blending traditional artistry with modern
+                digital technology.</p>
         </div>
 
     </main>
