--- a/installation.html
+++ b/installation.html
@@ -4,60 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Installation - Sofyane Hajoubi</title>
+    <title>The Singularity of Information — Sofyane Hajoubi</title>
     <link rel="icon" type="image/svg+xml" href="Favicon.svg">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="project.css">
 </head>
 
 <body>
-    <div class="cursor"></div>
+
     <header>
         <div class="logo"><a href="index.html">Sofyane Hajoubi</a></div>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="works.html" class="active">Works</a></li>
+                <li><a href="index.html#home">Home</a></li>
+                <li><a href="index.html#gallery">Gallery</a></li>
+                <li><a href="index.html#works">Works</a></li>
+                <li><a href="index.html#about">About</a></li>
             </ul>
-            <div class="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
         </nav>
     </header>
 
-    <main id="installation">
-        <section class="hero" style="min-height: 40vh; padding-top: 150px;">
-            <div class="reveal-holder">
-                <h1 class="reveal-text">Installation<br>Art</h1>
-            </div>
-        </section>
+    <main class="project-page">
 
-        <section class="works-list fade-up delay-1">
-            <div class="works-header">
-                <span>Project</span>
-                <span>Type</span>
-                <span>Year</span>
-            </div>
+        <div class="project-back">
+            <a href="index.html#gallery">← Back to Gallery</a>
+        </div>
 
-            <div class="work-row">
-                <span class="work-title">Void Structure</span>
-                <span class="work-category">Light & Space</span>
-                <span class="work-year">2023</span>
-            </div>
+        <h1 class="project-title">The Singularity of Information</h1>
+        <p class="project-subtitle">Interactive Installation and Cognitive Confinement</p>
 
-            <div class="work-row">
-                <span class="work-title">Ephemeral</span>
-                <span class="work-category">Smoke & Laser</span>
-                <span class="work-year">2021</span>
-            </div>
-        </section>
+        <div class="video-wrapper">
+            <iframe
+                src="https://player.vimeo.com/video/1167974188?badge=0&autopause=0&player_id=0&app_id=58479&title=0&byline=0&portrait=0&share=0&watch_later=0"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" title="The Singularity of Information">
+            </iframe>
+        </div>
+
+        <div class="project-description">
+            <p>This interactive installation explores propaganda as "personalized content" using infrared
+                motion-tracking. Digital orbits shadow viewers on a white sphere, creating a news stream that feels
+                universal but is uniquely targeted. The deception of this cognitive confinement is only unmasked through
+                the "Other," where juxtaposed digital squares reveal how screens can transform from windows into tools
+                of individual distortion.</p>
+        </div>
+
     </main>
 
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="script.js"></script>
 </body>
 
