--- a/works.html
+++ b/works.html
@@ -45,51 +45,39 @@
             </div>
 
             <a href="interactive.html" class="work-row">
-                <span class="work-title">Neural Mirror</span>
+                <span class="work-title">Interactive Posters</span>
+                <span class="work-category">Augmented Reality</span>
+                <span class="work-year">2024</span>
+            </a>
+
+            <a href="projection.html" class="work-row">
+                <span class="work-title">Harmony of Sound and Image Through Mapping</span>
+                <span class="work-category">Projection Mapping</span>
+                <span class="work-year">2024</span>
+            </a>
+
+            <a href="motion.html" class="work-row">
+                <span class="work-title">Synchronized Motion Graphics</span>
+                <span class="work-category">Motion Graphic</span>
+                <span class="work-year">2023</span>
+            </a>
+
+            <a href="installation.html" class="work-row">
+                <span class="work-title">The Singularity of Information</span>
+                <span class="work-category">Interactive Installation</span>
+                <span class="work-year">2025</span>
+            </a>
+
+            <a href="interactive.html" class="work-row">
+                <span class="work-title">Body Interactivity</span>
                 <span class="work-category">Interactive</span>
                 <span class="work-year">2024</span>
             </a>
 
-            <a href="installation.html" class="work-row">
-                <span class="work-title">Void Structure</span>
-                <span class="work-category">Installation</span>
-                <span class="work-year">2023</span>
-            </a>
-
-            <a href="projection.html" class="work-row">
-                <span class="work-title">City Pulse</span>
-                <span class="work-category">Projection Mapping</span>
-                <span class="work-year">2023</span>
-            </a>
-
             <a href="motion.html" class="work-row">
-                <span class="work-title">Kinetic Type</span>
-                <span class="work-category">Motion Graphic</span>
-                <span class="work-year">2022</span>
-            </a>
-
-            <a href="interactive.html" class="work-row">
-                <span class="work-title">Touch of Sound</span>
-                <span class="work-category">Interactive</span>
-                <span class="work-year">2022</span>
-            </a>
-
-            <a href="installation.html" class="work-row">
-                <span class="work-title">Ephemeral</span>
-                <span class="work-category">Installation</span>
-                <span class="work-year">2021</span>
-            </a>
-
-            <a href="projection.html" class="work-row">
-                <span class="work-title">Forest Spirits</span>
-                <span class="work-category">Projection Mapping</span>
-                <span class="work-year">2021</span>
-            </a>
-
-            <a href="motion.html" class="work-row">
-                <span class="work-title">Abstract Flow</span>
-                <span class="work-category">Motion Graphic</span>
-                <span class="work-year">2020</span>
+                <span class="work-title">Rhythmic Animation Inspired by "Disco Boy"</span>
+                <span class="work-category">Stop Motion</span>
+                <span class="work-year">2024</span>
             </a>
         </section>
     </main>
