--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     <div class="cursor"></div>
 
     <header>
-        <div class="logo"><a href="#splash-section">Sofyane Hajoubi</a></div>
+        <div class="logo"><a
+                href="/"><span>S</span><span>o</span><span>f</span><span>y</span><span>a</span><span>n</span><span>e</span><span>&thinsp;</span><span>H</span><span>a</span><span>j</span><span>o</span><span>u</span><span>b</span><span>i</span></a>
+        </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#works">Works</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#home" class="active"><span>H</span><span>o</span><span>m</span><span>e</span></a></li>
+                <li><a href="#works"><span>W</span><span>o</span><span>r</span><span>k</span><span>s</span></a></li>
+                <li><a href="#about"><span>A</span><span>b</span><span>o</span><span>u</span><span>t</span></a></li>
             </ul>
             <div class="menu-toggle">
                 <span></span>
@@ -55,7 +57,7 @@
         <!-- Home Section -->
         <section id="home" class="hero">
             <div class="reveal-holder">
-                <h1 class="reveal-text">Creative<br>Developer</h1>
+                <h1 class="reveal-text">Artist<br>Designer</h1>
             </div>
             <div class="reveal-holder">
                 <p class="subtitle fade-up delay-1">Creating digital experiences and interactive installations.</p>
